add point number limit, area number limit option. add 'addPushArrayToArea' method.

--- a/areaCanvasModuleExample.html
+++ b/areaCanvasModuleExample.html
@@ -19,8 +19,8 @@
   
       frc.addPointArrayToArea(0, [{x:10, y:10}, {x:10, y:60}, {x:60, y:60}, {x:60, y:10}]);
       frc.addPointArrayToArea(1, [{x:70, y:10}, {x:70, y:60}, {x:120, y:60}, {x:120, y:10}]);
-      frc.addPointArrayToArea(2, [{x:10, y:70}, {x:10, y:120}, {x:60, y:120}, {x:60, y:70}]);
-      frc.addPointArrayToArea(3, [{x:70, y:70}, {x:70, y:120}, {x:120, y:120}, {x:120, y:70}]);
+      frc.addPushArrayToArea([{x:10, y:70}, {x:10, y:120}, {x:60, y:120}, {x:60, y:70}]);
+      frc.addPushArrayToArea([{x:70, y:70}, {x:70, y:120}, {x:120, y:120}, {x:120, y:70}]);
     }
   </script>
 </html>
