change init example

--- a/areaCanvasModuleExample.html
+++ b/areaCanvasModuleExample.html
@@ -14,7 +14,12 @@
     window.onload = function() {
       var frc = new AreaCanvasModule();
       // frc.init("frcanvas", 640, 360, true);
-      frc.init({id:"areaCanvasModule", width:640, height:360, debug:true, pointNumberLimit:10, pointAreaLimit:5, defaultImage:"/images/imgfail.jpg"});
+      frc.init({id:"areaCanvasModule", 
+                width:640, height:360,
+                debug:true,
+                pointNumberLimit:10,
+                pointAreaLimit:5,
+                defaultImage:"https://st2.depositphotos.com/2274151/11073/v/950/depositphotos_110731914-stock-illustration-failed-red-grunge-round-vintage.jpg"});
       frc.setImageURL("https://pbs.twimg.com/media/CT-_kN6UAAER5P4.jpg");
   
       frc.addPointArrayToArea(0, [{x:10, y:10}, {x:10, y:60}, {x:60, y:60}, {x:60, y:10}]);
