--- a/areaCanvasModuleExample.html
+++ b/areaCanvasModuleExample.html
@@ -26,6 +26,8 @@
       frc.addPointArrayToArea(1, [{x:70, y:10}, {x:70, y:60}, {x:120, y:60}, {x:120, y:10}]);
       frc.addPushArrayToArea([{x:10, y:70}, {x:10, y:120}, {x:60, y:120}, {x:60, y:70}]);
       frc.addPushArrayToArea([{x:70, y:70}, {x:70, y:120}, {x:120, y:120}, {x:120, y:70}]);
+
+      window.frc = frc; //for debuging
     }
   </script>
 </html>
