add arrayColor option to init.

--- a/areaCanvasModuleExample.html
+++ b/areaCanvasModuleExample.html
@@ -18,7 +18,8 @@
                 width:640, height:360,
                 debug:true,
                 pointNumberLimit:10,
-                pointAreaLimit:5,
+                areaNumberLimit:4,
+                arrayColor:["#EC7063", "#AF7AC5", "#5DADE2"],
                 defaultImage:"https://st2.depositphotos.com/2274151/11073/v/950/depositphotos_110731914-stock-illustration-failed-red-grunge-round-vintage.jpg"});
       frc.setImageURL("https://pbs.twimg.com/media/CT-_kN6UAAER5P4.jpg");
   
