--- a/areaCanvasModuleExample.html
+++ b/areaCanvasModuleExample.html
@@ -19,7 +19,7 @@
                 debug:true,
                 pointNumberLimit:10,
                 areaNumberLimit:4,
-                arrayColor:["#EC7063", "#AF7AC5", "#5DADE2"],
+                arrayColor:["#FF3838", "#197CBF", "#4FCE57", "#8731D0"],
                 defaultImage:"https://st2.depositphotos.com/2274151/11073/v/950/depositphotos_110731914-stock-illustration-failed-red-grunge-round-vintage.jpg"});
       frc.setImageURL("https://pbs.twimg.com/media/CT-_kN6UAAER5P4.jpg");
   
